--- a/MyCity4Kids/MyCity4Kids/res/layout/m_private_profile_activity.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/m_private_profile_activity.xml
@@ -122,7 +122,7 @@
                             android:layout_below="@+id/authorNameTextView"
                             android:layout_alignParentEnd="true" />
 
-                        <com.mycity4kids.widget.CustomFontTextView
+                        <com.mycity4kids.widget.ResizableTextView
                             android:id="@+id/authorBioTextView"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
@@ -130,7 +130,9 @@
                             android:gravity="center"
                             android:paddingStart="16dp"
                             android:paddingEnd="16dp"
-                            android:text="@string/random_text" />
+                            android:text="@string/random_text"
+                            android:textColor="@color/app_light_black"
+                            app:maxLines="2" />
 
                         <com.mycity4kids.widget.CustomFontTextView
                             android:id="@+id/contentLangTextView"
@@ -142,7 +144,8 @@
                             android:drawableStart="@drawable/profile_solid_square"
                             android:drawablePadding="10dp"
                             android:gravity="center"
-                            android:text="dwadad" />
+                            android:text=""
+                            android:textColor="@color/app_light_pink" />
 
                         <androidx.constraintlayout.widget.ConstraintLayout
                             android:layout_width="match_parent"
