--- a/MyCity4Kids/MyCity4Kids/res/menu/delete_edit_collection_menu.xml
+++ b/MyCity4Kids/MyCity4Kids/res/menu/delete_edit_collection_menu.xml
@@ -3,13 +3,12 @@
     <item
         android:id="@+id/edit_collection"
         android:actionMenuTextColor="@color/app_red"
-        android:title="Edit Collection"
-        android:visible="false"
+        android:title="@string/edit_collection"
 
         />
     <item
         android:id="@+id/delete_collection"
         android:actionMenuTextColor="@color/app_red"
-        android:title="Delete Collection" />
+        android:title="@string/delete_collection" />
 
 </menu>
