--- a/MyCity4Kids/MyCity4Kids/res/layout/add_collection_adapter.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/add_collection_adapter.xml
@@ -1,35 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/root"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
 
-    <androidx.appcompat.widget.AppCompatImageView
-        android:id="@+id/collectionImageVIEW"
-        android:layout_width="75dp"
-        android:layout_height="75dp"
+    <androidx.cardview.widget.CardView
+        android:id="@+id/collectionImageViewCard"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_centerVertical="true"
-        android:layout_marginLeft="@dimen/space_10"
-        android:src="@drawable/default_article" />
+        android:layout_marginStart="@dimen/space_10"
+      >
 
-
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/collectionImageVIEW"
+            android:layout_width="100dp"
+            android:layout_height="85dp"
+            android:scaleType="centerCrop"/>
+    </androidx.cardview.widget.CardView>
 
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
-        android:layout_toLeftOf="@+id/close"
-        android:layout_toRightOf="@id/collectionImageVIEW">
+        android:layout_marginStart="@dimen/space_16"
+        android:layout_toStartOf="@+id/close"
+        android:layout_toEndOf="@id/collectionImageViewCard">
 
         <com.mycity4kids.widget.CustomFontTextView
             android:id="@+id/collectionTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/space_10"
+            android:layout_marginStart="@dimen/space_10"
             android:ellipsize="end"
             android:maxLines="1"
-            android:text="Weddine Makeup Tips"
             android:textColor="@color/black"
             android:textSize="16sp" />
 
@@ -40,12 +46,11 @@
             android:layout_below="@id/collectionTitle"
             android:layout_marginLeft="@dimen/space_10"
             android:layout_marginTop="@dimen/space_5"
-
             android:ellipsize="end"
             android:maxLines="1"
-            android:text="Lorem Ipsum is simply"
             android:textColor="@color/black"
-            android:textSize="12sp" />
+            android:textSize="12sp"
+            android:visibility="gone" />
     </RelativeLayout>
 
     <androidx.appcompat.widget.AppCompatImageView
@@ -61,10 +66,10 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:layout_below="@id/collectionImageVIEW"
+        android:layout_below="@id/collectionImageViewCard"
+        android:layout_marginStart="@dimen/space_10"
         android:layout_marginTop="@dimen/space_10"
         android:layout_marginEnd="@dimen/space_10"
-        android:layout_marginStart="@dimen/space_10"
         android:background="#DADADA" />
 
 
