--- a/MyCity4Kids/MyCity4Kids/res/layout/user_collection_item_activity.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/user_collection_item_activity.xml
@@ -4,24 +4,26 @@
     android:id="@+id/root"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+
+
     android:background="@android:color/background_light">
 
 
     <com.google.android.material.appbar.AppBarLayout
-        android:id="@+id/appBar"
+        android:id="@+id/appBar1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:fitsSystemWindows="true"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
         <com.google.android.material.appbar.CollapsingToolbarLayout
             android:id="@+id/collapsing_toolbar"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:contentScrim="?attr/colorPrimary"
+            app:contentScrim="@color/app_red"
             app:layout_scrollFlags="scroll|snap|exitUntilCollapsed">
 
             <androidx.appcompat.widget.Toolbar
+                android:id="@+id/toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
                 android:elevation="5dp"
@@ -35,7 +37,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/space_10"
-                    android:visibility="visible">
+                    android:visibility="visible"
+                    app:layout_collapseMode="pin">
 
 
                     <LinearLayout
@@ -43,8 +46,9 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_alignParentEnd="true"
+                        android:layout_centerVertical="true"
+                        android:layout_marginStart="@dimen/space_5"
                         android:layout_marginEnd="@dimen/space_10"
-                        android:gravity="center_vertical"
                         android:orientation="horizontal">
 
                         <com.mycity4kids.widget.CustomFontTextView
@@ -98,7 +102,6 @@
                         android:marqueeRepeatLimit="marquee_forever"
                         android:scrollHorizontally="true"
                         android:singleLine="true"
-                        android:text="My top blogs"
                         android:textAllCaps="true"
                         android:textColor="@color/white"
                         android:textSize="@dimen/space_18"
@@ -106,14 +109,16 @@
 
                     <androidx.appcompat.widget.AppCompatImageView
                         android:id="@+id/back"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_width="@dimen/space_50"
+                        android:layout_height="@dimen/space_50"
                         android:layout_alignParentStart="true"
                         android:layout_centerVertical="true"
+                        android:padding="@dimen/space_10"
                         android:src="@drawable/back_arroow" />
 
 
                 </RelativeLayout>
+
             </androidx.appcompat.widget.Toolbar>
 
             <RelativeLayout
@@ -127,13 +132,13 @@
                     android:layout_width="match_parent"
                     android:layout_height="150dp"
                     android:scaleType="fitXY"
-                    android:src="@drawable/desert" />
+                    android:src="@drawable/default_article" />
 
 
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="150dp"
-                    android:background="#40000000" />
+                    android:background="#80000000" />
 
 
                 <RelativeLayout
@@ -151,9 +156,8 @@
                         android:layout_height="wrap_content"
                         android:layout_centerVertical="true"
                         android:gravity="center_vertical"
-                        android:text="121"
                         android:textColor="@color/white"
-                        android:textSize="16dp"
+                        android:textSize="16sp"
                         app:fontName="OpenSans-Bold.ttf" />
 
                     <com.mycity4kids.widget.CustomFontTextView
@@ -166,7 +170,7 @@
                         android:drawableRight="@drawable/arrow_right"
                         android:drawableTint="@color/white"
                         android:gravity="center_vertical"
-                        android:text="Follower"
+                        android:text="@string/myprofile.followers_label"
                         android:textColor="@color/white"
                         android:textSize="12sp"
                         app:fontName="open_sans.ttf" />
@@ -187,7 +191,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_alignParentEnd="true"
-                        android:text="visible to all"
+                        android:text="@string/visible_to_all"
                         android:textColor="@color/white"
                         android:textSize="14sp"
                         app:switchPadding="@dimen/space_10" />
@@ -196,36 +200,66 @@
 
             </RelativeLayout>
 
-
         </com.google.android.material.appbar.CollapsingToolbarLayout>
 
-        <com.mycity4kids.widget.CustomFontTextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/collectionImageVIEW"
-            android:layout_margin="@dimen/space_5"
-            android:maxLength="150"
-            android:padding="@dimen/space_10"
-            android:text="vcvdscvdscbds bcsdbc bdb bacb ibasiu bauisb uahsudiqw ihiduq iahiduqh bdiub kfbhjbrfhbfhcbfjwhbefjcbhjbchjwbbcwjbjwbwjbrcjwbjjwbejcwbjjwcbrjwbjrbbwjbecjwbjerbwjerbjbcjerbwjrbbwjebrjbwerbjrbjewbrwbrwjhebrjwberjbrcjw"
-            android:textColor="@color/black" />
 
     </com.google.android.material.appbar.AppBarLayout>
 
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/collectionItemRecyclerView"
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@id/toolbar"
-        android:layout_margin="@dimen/space_5"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+        android:layout_height="wrap_content"
+        android:fillViewport="true"
+        android:visibility="visible"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <com.mycity4kids.widget.CustomFontTextView
+                android:id="@+id/descriptionTextView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:padding="@dimen/space_10"
+                android:text="@string/campaign_discription"
+                android:textColor="@color/campaign_515151"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                android:visibility="gone" />
+
+            <com.mycity4kids.widget.CustomFontTextView
+                android:id="@+id/collectionDescription"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/descriptionTextView"
+                android:layout_marginStart="@dimen/space_16"
+                android:layout_marginEnd="@dimen/space_16"
+                android:background="@drawable/about_user_bg"
+                android:gravity="center_vertical"
+                android:padding="@dimen/space_16"
+                android:textColor="@color/app_light_black"
+                android:textSize="14sp"
+                android:visibility="gone" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/collectionItemRecyclerView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_below="@+id/collectionDescription"
+                android:layout_marginStart="@dimen/space_5"
+                android:layout_marginEnd="@dimen/space_5"
+                android:layout_marginBottom="@dimen/space_5"
+                android:nestedScrollingEnabled="false" />
+        </RelativeLayout>
+    </androidx.core.widget.NestedScrollView>
 
     <com.mycity4kids.widget.CustomFontTextView
         android:id="@+id/itemNotAddedTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:text="you haven't added any item yet"
+        android:layout_gravity="center"
+        android:text="@string/no_collection_items"
         android:textColor="@color/black"
         android:visibility="gone" />
 
@@ -235,7 +269,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/white"
-        android:visibility="gone"
+        android:visibility="visible"
         app:duration="1000">
 
         <LinearLayout
@@ -252,6 +286,25 @@
         </LinearLayout>
 
     </com.facebook.shimmer.ShimmerFrameLayout>
+
+    <FrameLayout
+        android:id="@+id/deleteCollectionMainLayout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/transparent_black_90"
+        android:clickable="false"
+        android:visibility="gone">
+
+        <include
+            android:id="@+id/includeDeleteCollectionLayout"
+            layout="@layout/delete_collection_confirm_pop_up"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginStart="@dimen/space_16"
+            android:layout_marginEnd="@dimen/space_16" />
+    </FrameLayout>
+
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
