--- a/MyCity4Kids/MyCity4Kids/res/layout/user_collections_grid_view.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/user_collections_grid_view.xml
@@ -1,25 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:background="@color/white"
-    android:orientation="vertical">
+    android:background="#F9F9F9">
 
     <RelativeLayout
         android:id="@+id/imvAuthorThumbContainer"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="center"
-        android:background="@color/white"
+        android:background="#F9F9F9"
         android:orientation="vertical">
 
         <androidx.cardview.widget.CardView
             android:id="@+id/imageCardView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/space_5"
-            app:cardElevation="@dimen/space_10">
+            android:layout_margin="@dimen/space_3"
+            app:cardElevation="@dimen/space_2">
 
             <androidx.appcompat.widget.AppCompatImageView
                 android:id="@+id/tagImageView"
@@ -49,5 +48,5 @@
     </RelativeLayout>
 
 
-</LinearLayout>
+</RelativeLayout>
 
