--- a/MyCity4Kids/MyCity4Kids/res/layout/user_followed_collections_fragment.xml
+++ b/MyCity4Kids/MyCity4Kids/res/layout/user_followed_collections_fragment.xml
@@ -28,7 +28,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:text="you haven't created any collection yet"
+        android:text="@string/no_collections_yet"
         android:textColor="@color/black"
         android:visibility="gone" />
 
